attempt to fix buttons that look squished

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -343,8 +343,8 @@ button.new-cat-submit {
 
 @media only screen and (max-width: 600px) {
 	button.plus {
-		min-height: 40px;
-		min-width: 40px;
+		min-height: 35px;
+		min-width: 35px;
 		margin-left: 0px;
 	}
 }
@@ -389,8 +389,8 @@ button.new-cat-submit {
 		margin: 0px;
 	}
 	button.plus {
-		min-height: 40px;
-		min-width: 40px;
+		min-height: 35px;
+		min-width: 35px;
 		margin-left: 15%;
 		margin-right: 2%;
 	}
